--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-            <h3>UI/UX Designer &amp; Web Developer.</h3>
+            <h3>Software Developer &amp; Web Developer.</h3>
             <p class="fst-italic">
               This is a brief introduction of myself. Here are some of my details information:
             </p>
@@ -108,13 +108,14 @@
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>29</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>PhEmailone:</strong> <span>razbanshiamit@gmail.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>razbanshiamit@gmail.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
                 </ul>
               </div>
             </div>
             <p>
-              I always wanted to be a great writer, like Victor Hugo who wrote "Les Miserable", or like Roman Roland who wrote "John Christopher". They have influenced millions of people through their books. I also wanted to be a great psychologist, like William James or Sigmund Freud, who could read people’s mind. Of course, I am nowhere close to these people, yet. I am just someone who does some teaching, some research, and some writing. But my dream is still alive.
+              I always wanted to be a Developer, In this 21st centuary the era of Technology, i want to contribute my skills and work in this field , so that the people can make their life easier.
+
 
             </p>
           </div>
@@ -228,7 +229,7 @@
             </div>
 
             <div class="progress">
-              <span class="skill">Photoshop <i class="val">55%</i></span>
+              <span class="skill">Java  <i class="val">100%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -267,14 +268,14 @@
 
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>Master's in Computer Engineering &amp; Graphic Design</h4>
-              <h5>2015 - 2016</h5>
+              <h4>Master's in Computer Engineering</h4>
+              <h5>2021 - 2023</h5>
               <p><em>Guru Nanak Institute of Technology, Maullna, INDIA</em></p>
               <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
             </div>
             <div class="resume-item">
-              <h4>Bachelor's in Computer Engineering &amp; Graphic Design</h4>
-              <h5>2010 - 2014</h5>
+              <h4>Bachelor's in Computer Engineering</h4>
+              <h5>2015 - 2018</h5>
               <p><em>Adesh Institute of Technology, Chandigarh, INDIA</em></p>
               <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
             </div>
@@ -282,9 +283,9 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Senior graphic design specialist</h4>
-              <h5>2019 - Present</h5>
-              <p><em>Experion, New York, NY </em></p>
+              <h4>Java Developer</h4>
+              <h5>2019 - present</h5>
+              <p><em>Biratnagar,Nepal </em></p>
               <ul>
                 <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
                 <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
